<resources>
    <string name="app_name">Dish Recipes</string>
    <string name="st_new">New</string>
    <string name="st_all_dishes">All Dishes</string>
    <string name="st_favorite">Favorite</string>
    <string name="st_community_dishes">Community Dishes</string>
    <string name="st_permission_error">Permission is Not Granted</string>
    <string name="st_settings">Settings</string>
    <string name="st_fill_field">Fill the field</string>
    <string name="st_some_error">Some Error has Occurred</string>
    <string name="notification_title">New Dish is Available</string>
    <string name="notification_text">Type to more details</string>

    <!--Descriptions-->
    <string name="st_dish_image">Dish image</string>

    <!--Types and Categories-->
    <string name="st_breakfast">Breakfast</string>
    <string name="st_dessert">Dessert</string>
    <string name="st_dinner">Dinner</string>
    <string name="st_lunch">Lunch</string>
    <string name="st_snacks">Snacks</string>
    <string name="st_salad">Salad</string>
    <string name="st_side_dish">Side Dish</string>
    <string name="st_other">Other</string>
    <string-array name="dish_types">
        <item>@string/st_breakfast</item>
        <item>@string/st_dessert</item>
        <item>@string/st_dinner</item>
        <item>@string/st_lunch</item>
        <item>@string/st_snacks</item>
        <item>@string/st_salad</item>
        <item>@string/st_side_dish</item>
        <item>@string/st_other</item>
    </string-array>
    <string-array name="dish_category">
        <item>Bakery</item>
        <item>BBQ</item>
        <item>Burger</item>
        <item>Cafe</item>
        <item>Chicken</item>
        <item>Desert</item>
        <item>Drinks</item>
        <item>Hot Dogs</item>
        <item>Juices</item>
        <item>Pizza</item>
        <item>Sandwich</item>
        <item>Tea/Coffee</item>
        <item>Wraps</item>
        <item>Other</item>
    </string-array>

    <!--AddUpdateDish-->
    <string name="st_label">Label</string>
    <string name="st_type">Type</string>
    <string name="st_category">Category</string>
    <string name="st_ingredients">Ingredients</string>
    <string name="st_cooking_time">Cooking Time (In Minutes)</string>
    <string name="st_steps">Steps</string>
    <string name="st_add_dish">Add Dish</string>
    <string name="st_image_not_selected">Image Is Not Selected</string>
    <string name="st_dish_saved">Dish Saved Successfully</string>
    <string name="st_apply_changes">Apply Changes</string>

    <!--AllDishes-->
    <string name="st_no_dishes">No Dishes Added Yet</string>
    <string name="st_all">All</string>
    <string name="st_you_are_not_owner">You are Not Owner of this Recipe</string>

    <!--Dish Details-->
    <string name="st_edit">Edit</string>
    <string name="st_delete">Delete</string>
    <string name="st_successfully_deleted">Successfully Deleted</string>
    <string name="st_minutes">minutes</string>

    <!--RandomDish-->
    <string name="st_source">Source</string>
</resources>