<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".ui.fragments.addupdatedish.AddUpdateDishFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <FrameLayout
            android:id="@+id/fl_select_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_image_frame_height"
            android:background="@color/primaryLightColor"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_image_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/st_image_not_selected"
                android:textAppearance="?attr/textAppearanceLabelLarge"
                android:textColor="?attr/colorOnPrimary" />

            <ImageView
                android:id="@+id/iv_dish_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/st_dish_image"
                android:scaleType="centerCrop" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/dim_camera_icon_on_frame_margin"
                android:scaleX="1.25"
                android:scaleY="1.25"
                android:src="@drawable/ic_camera_24dp"
                app:tint="?attr/colorOnPrimary" />
        </FrameLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_label"
            style="@style/AddUpdateDishTextInputLayout"
            android:hint="@string/st_label"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_select_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:maxLength="20"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_type"
            style="@style/AddUpdateDishTextInputLayoutDropDownMenu"
            android:hint="@string/st_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_label">

            <AutoCompleteTextView
                android:id="@+id/et_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_category"
            style="@style/AddUpdateDishTextInputLayoutDropDownMenu"
            android:hint="@string/st_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_type">

            <AutoCompleteTextView
                android:id="@+id/et_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ingredients"
            style="@style/AddUpdateDishTextInputLayout"
            android:hint="@string/st_ingredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_category">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_cooking_time"
            style="@style/AddUpdateDishTextInputLayout"
            android:hint="@string/st_cooking_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_ingredients">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cooking_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_steps"
            style="@style/AddUpdateDishTextInputLayout"
            android:hint="@string/st_steps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_cooking_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add_dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_til_margin"
            android:layout_marginTop="@dimen/dim_til_margin"
            android:layout_marginEnd="@dimen/dim_til_margin"
            android:text="@string/st_add_dish"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/pb_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_steps" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/pb_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_dish"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>